actualizacion sitio web

--- a/02-html/porfolio/index.html
+++ b/02-html/porfolio/index.html
@@ -34,6 +34,126 @@
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi ex libero aperiam inventore ipsam labore fugiat id? Cupiditate, ipsum accusantium neque eos, nam harum doloribus voluptates minima aspernatur, sapiente incidunt?
     </p>
+    <section>
+<h2>habilidades</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsam at consectetur eos ipsa consequuntur vitae dolorem pariatur facilis quaerat.
+</p>
+<div>
+  <div style="border: 1px solid black;">
+    <div>
+      <img src="https://i.blogs.es/664d0f/descarga/450_1000.png" alt="" height="25px">
+      <h4>javascript</h4>
+      <span>1 año</span>
+</div>
+<div>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis facilis dolores saepe illum porro impedit minima, hic tempore sunt deleniti!</p>
+
+</div>
+<div>
+    <span>ember</span>
+    <span>react</span>
+    <span>gatsby</span>
+</div>
+</div>
+</div><div>
+    <div style="border: 1px solid black;">
+      <div>
+        <img src="https://i.blogs.es/664d0f/descarga/450_1000.png" alt="" height="25px">
+        <h4>javascript</h4>
+        <span>1 año</span>
+  </div>
+  <div>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis facilis dolores saepe illum porro impedit minima, hic tempore sunt deleniti!</p>
+  
+  </div>
+  <div>
+      <span>ember</span>
+      <span>react</span>
+      <span>gatsby</span>
+  </div>
+  </div>
+  </div><div>
+    <div style="border: 1px solid black;">
+      <div>
+        <img src="https://i.blogs.es/664d0f/descarga/450_1000.png" alt="" height="25px">
+        <h4>javascript</h4>
+        <span>1 año</span>
+  </div>
+  <div>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis facilis dolores saepe illum porro impedit minima, hic tempore sunt deleniti!</p>
+  
+  </div>
+  <div>
+      <span>ember</span>
+      <span>react</span>
+      <span>gatsby</span>
+  </div>
+
+  </div>
+  </div><div>
+    <div style="border: 1px solid black;">
+      <div>
+        <img src="https://i.blogs.es/664d0f/descarga/450_1000.png" alt="" height="25px">
+        <h4>javascript</h4>
+        <span>1 año</span>
+  </div>
+  <div>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis facilis dolores saepe illum porro impedit minima, hic tempore sunt deleniti!</p>
+  
+  </div>
+  <div>
+      <span>ember</span>
+      <span>react</span>
+      <span>gatsby</span>
+  </div>
+
+  </div>
+
+  </div>
+  <section>
+   <footer>
+    <div style="background-color: aqua ;"
+    <p>diseñado por riffel j. esperance</p>
+    </div>
+    <div style="background-color: olive;">
+        <ul>
+            <li>😜</li>
+            <li>😍</li>
+            <li>😁</li>
+            <li>😘</li>
+            <li>😒</li>
+        </ul>
+
+    </div>
+
+   </footer>
+
+
+
+
+
+  </section>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+
+
+
+
+    </section>
 </body>
 
 </html>
