add contact form

--- a/02-html/porfolio/index.html
+++ b/02-html/porfolio/index.html
@@ -111,11 +111,25 @@
 
   </div>
   <section>
-   <footer>
-    <div style="background-color: aqua ;"
+      <h2>contactanos</h2>
+     <p>
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ex optio dolor totam mollitia sed nisi culpa, sunt omnis impedit!
+     </p>
+     <form action="
+     "><input type="" placeholder="tu nombre">
+     <input type="" placeholder="tu correo electronico">
+     <textarea name="" id="" cols="30" rows="10" placeholder="
+     tu mensaje"></textarea>
+     <button>enviar</button>
+    
+    </form>
+  </section>
+  <section>
+    <footer>
+    <div 
     <p>diseñado por riffel j. esperance</p>
     </div>
-    <div style="background-color: olive;">
+    <div>
         <ul>
             <li>😜</li>
             <li>😍</li>
@@ -123,9 +137,7 @@
             <li>😘</li>
             <li>😒</li>
         </ul>
-
-    </div>
-
+     </div>
    </footer>
 
 
