--- a/02-html/porfolio/index.html
+++ b/02-html/porfolio/index.html
@@ -111,6 +111,67 @@
 
   </div>
   <section>
+      <h2>algunas de mis proyectos</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, aut!
+      </p>
+  </section>
+  <div style="border: 1px solid black;">
+    <h3>proyecto 1</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+     <div>
+     <span>ember</span>
+     <span>react</span>
+     <span>ember</span>
+     </div>
+     <div>
+        <span>Full design y development</span>
+     </div>
+      <img src="https://ivanvotti.com/static/6c7cc6c9ead4655e892a24c6b593ff18/402ed/vertebrolog.webp" 
+      alt="" width="78%">
+
+
+  </div>
+<div style="border: 1px solid black;">
+  <h3>proyecto 2</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+   <div>
+   <span>ember</span>
+   <span>react</span>
+   <span>ember</span>
+   </div>
+   <div>
+      <span>Full design y development</span>
+   </div>
+    <img src="https://ivanvotti.com/static/694eabe08cd1dc177638127547a6378e/402ed/csural.webp" 
+    alt="" width="78%">
+    
+
+</div>
+<div style="border: 1px solid black;">
+    <h3>proyecto 3</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+     <div>
+     <span>ember</span>
+     <span>react</span>
+     <span>ember</span>
+     </div>
+     <div>
+        <span>Full design y development</span>
+     </div>
+      <img src="https://ivanvotti.com/static/6c7cc6c9ead4655e892a24c6b593ff18/402ed/vertebrolog.webp" 
+      alt="" width="78%">
+      
+  
+  </div>
+
+  
+  <section>
+      <img src="
+      https://ivanvotti.com/static/cfe0191b18ad06cd620f3e1b65c34964/8b3f0/working.webp" alt="imagen decorativa" width="78%">
+
+  </section>
+  <section>
       <h2>contactanos</h2>
      <p>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ex optio dolor totam mollitia sed nisi culpa, sunt omnis impedit!
