--- a/02-html/index.html
+++ b/02-html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<head>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,7 +39,7 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsam at consectetur eos ipsa consequuntur vitae dolorem pariatur facilis quaerat.
 </p>
 <div>
-  <div style="border: 1px solid black;">
+  <div style="border: 1px solid black; width: 20%;">
     <div>
       <img src="https://i.blogs.es/664d0f/descarga/450_1000.png" alt="" height="25px">
       <h4>javascript</h4>
@@ -56,7 +56,7 @@
 </div>
 </div>
 </div><div>
-    <div style="border: 1px solid black;">
+    <div style="border: 1px solid black; width: 20%;">
       <div>
         <img src="https://i.blogs.es/664d0f/descarga/450_1000.png" alt="" height="25px">
         <h4>javascript</h4>
@@ -73,7 +73,7 @@
   </div>
   </div>
   </div><div>
-    <div style="border: 1px solid black;">
+    <div style="border: 1px solid black; width: 20%;">
       <div>
         <img src="https://i.blogs.es/664d0f/descarga/450_1000.png" alt="" height="25px">
         <h4>javascript</h4>
@@ -91,7 +91,7 @@
 
   </div>
   </div><div>
-    <div style="border: 1px solid black;">
+    <div style="border: 1px solid black; width: 20%;">
       <div>
         <img src="https://i.blogs.es/664d0f/descarga/450_1000.png" alt="" height="25px">
         <h4>javascript</h4>
@@ -116,7 +116,7 @@
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, aut!
       </p>
   </section>
-  <div style="border: 1px solid black;">
+  <div style="border: 1px solid black;width: 20%;">
     <h3>proyecto 1</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
      <div>
@@ -132,7 +132,7 @@
 
 
   </div>
-<div style="border: 1px solid black;">
+<div style="border: 1px solid black; width: 20%;">
   <h3>proyecto 2</h3>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
    <div>
@@ -148,7 +148,7 @@
     
 
 </div>
-<div style="border: 1px solid black;">
+<div style="border: 1px solid black; width: 20%;">
     <h3>proyecto 3</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
      <div>
@@ -202,9 +202,9 @@
    </footer>
 
 
+<link rel="stylesheet" href="style.css">
 
-
-
+</head>
   </section>
   
 
