--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,10 @@
                 <a href="https://github.com/riffelinho">
                     <li>Github</li>
                 </a>
-                <a href="https://www.instagram.com/_riffelinho/">
+                <a href="https://www.instagram.com/_riffelinho/saved/">
                     <li>instagram</li>
+                </a>
+
                 </a>
             </ul>
         </div>
