--- a/06-sitio-porfolio/index.html
+++ b/06-sitio-porfolio/index.html
@@ -25,8 +25,12 @@
         </nav>
 
     </main>
-
-
+  <!--fotografia y descripcion-->
+  
+    <header class="hero">
+       <div class="hero__photo"></div>
+       <div class="hero__text"></div>
+    </header>
 
 </body>
 
