segundo commit: cajas contenedoras

--- a/06-sitio-porfolio/index.html
+++ b/06-sitio-porfolio/index.html
@@ -28,7 +28,9 @@
   <!--fotografia y descripcion-->
   
     <header class="hero">
-       <div class="hero__photo"></div>
+       <div class="hero__photo">
+           <img src="./img/WhatsApp Image 2021-12-03 at 2.10.15 PM.jpeg" alt="" srcset="">
+       </div>
        <div class="hero__text"></div>
     </header>
 
