tercer commit: agregar espacios de texto para giros

--- a/06-sitio-porfolio/index.html
+++ b/06-sitio-porfolio/index.html
@@ -31,7 +31,14 @@
        <div class="hero__photo">
            <img src="./img/WhatsApp Image 2021-12-03 at 2.10.15 PM.jpeg" alt="" srcset="">
        </div>
-       <div class="hero__text"></div>
+       <div class="hero__text">
+           <h3>DEVELPER & STUDENT</h3>
+           <h2>
+              <span class="title">¡Hola!, soy riffel</span>
+              <span class="title-dark">Estoy aprendiendo a programar con DEV.F</span>
+           </h2 >
+           <button>GET IN TOUCH</button>
+       </div>
     </header>
 
 </body>
